# RealStock

./: .gitignore  README.md  pyproject.toml
api/: main.py
api/routers/: achievements.py  challenges.py  game.py  indicators.py  leaderboard.py  saves.py  stocks.py  t_trades.py  websocket.py
api/services/: achievement_definitions.py  achievement_models.py  achievement_service.py  challenge_models.py  challenge_service.py  indicator_runner.py  indicator_service.py  leaderboard_service.py  save_service.py  session.py  t_trade_models.py  t_trade_service.py
examples/: interactive_play.py  simple_backtest.py
experiments/holy_grail/: README.md  chase_strategy.py  check_cache_sanity.py  check_stock_list.py  check_tx_adjust.py  data_loader.py  find_golden_window.py  golden_windows.csv  grail_indicator.py  plot_lri_preview.py  run_golden_and_forward.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
src/: __init__.py  exceptions.py
src/account/: __init__.py  account.py  models.py
src/data_engine/: __init__.py  engine.py  models.py
src/playback/: __init__.py  engine.py  models.py
src/simulator/: __init__.py  simulator.py
src/trading/: __init__.py  engine.py  models.py
tests/: __init__.py  test_daily_cache_and_indicators.py  test_trade_fill_dates.py
tests/integration/: test_achievement_flow.py  test_challenge_flow.py  test_save_system_flow.py  test_trading_flow.py
tests/property/: test_account_properties.py  test_achievement_models.py  test_achievement_service.py  test_challenge_service.py  test_t_trade_service.py  (+6 more)
(+126 files in other folders)
